##Text encoding: utf-8

2010-06-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: fix used libraries list.
	* goffice/gogcpwin.cc: 	always update bounds.
	* libs/gcu/application.cc: fix a NULL pointer issue.

2010-06-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add a new libgcr library.
	* docs/reference/Doxyfile.in: ditto.
	* goffice/Makefile.am: start adding support for crystal structures.
	* goffice/gchemutils.cc: ditto.
	* goffice/gogcpwin.cc: ditto.
	* goffice/gogcpwin.h: ditto.
	* goffice/gogcrystalapp.cc: ditto.
	* goffice/gogcrystalapp.h: ditto.
	* goffice/gogcrystalwin.cc: ditto.
	* goffice/gogcrystalwin.h: ditto.
	* goffice/plugin.xml.in: ditto.
	* libs/Makefile.am: add a new libgcr library.
	* libs/gcr/Makefile.am: ditto.
	* libs/gcr/window.cc: ditto.
	* libs/gcr/window.h: ditto.
	* libs/gcu/chemistry.h: ditto.

2010-06-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/atoms/orbital.cc: fix orbital code when the atom is inside
	a fragment. [#29862]

2010-06-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdxml/cdxml.cc: use gcu::Application::CreateObject().
	* plugins/loaders/cif/cif.cc: ditto.
	* plugins/loaders/cml/cml.cc: ditto.

2010-06-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: use gcu::Application::CreateObject().
	* libs/gcp/document.cc: ditto.
	* libs/gcp/fragment-residue.cc: ditto.
	* libs/gcp/residue.cc: ditto.
	* libs/gcp/residue.h: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/application.h: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/gcucrystalviewer.cc: ditto.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/object.cc: ditto.
	* libs/gcu/object.h: ditto.
	* libs/gcu/residue.cc: ditto.
	* libs/gcu/residue.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/paint/arrows/plugin.cc: ditto.
	* plugins/paint/atoms/plugin.cc: ditto.
	* plugins/paint/residues/plugin.cc: ditto.