@@ -1,5 +1,14 @@
 ##Text encoding: utf-8
 
+2010-06-24  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcu/Makefile.am: add new message box class.
+	* libs/gcu/application.cc: use gcu::Message.
+	* libs/gcu/dialog.cc: ditto.
+	* libs/gcu/message.cc: new message box class.
+	* libs/gcu/message.h: ditto.
+	* plugins/paint/selection/bracketstool.cc: start work on property page.
+	* plugins/paint/selection/bracketstool.h: ditto.
+
 2010-06-23  Jean Bréfort  <jean.brefort@normalesup.org>
 	* goffice/Makefile.am: fix used libraries list.
 	* goffice/gogcpwin.cc: 	always update bounds.
